contact-list-store: store GtkTreeIter rather than GtkTreeRowReference in the cache

GtkTreeRowReference keeps a ref on the store introducing a ref cycle.

https://bugzilla.gnome.org/show_bug.cgi?id=658650